Use serialization instead of hard coding vector, vector[] dictionaries

--- a/tetra.csproj
+++ b/tetra.csproj
@@ -9,4 +9,13 @@
     <PackageReference Include="Chroma" Version="0.17.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Content\IKickData.vff">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\KickData.vff">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
