--- a/tetra.csproj
+++ b/tetra.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Chroma" Version="0.17.1" />
+    <PackageReference Include="Chroma" Version="0.33.0" />
   </ItemGroup>
 
   <ItemGroup>
